# pycounts_s_mck

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: workflows.ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_s_mck/: __init__.py
tests/: test_pycounts_s_mck.py
