[tool.poetry]
name = "pycounts_s_mck"
version = "0.1.0"
description = "A package for counting the number of words in a text file"
authors = ["Scout McKee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
